# TrainDataAssignment

./: .gitignore  main.py  readme.org  setup.cfg  utils.py
src/assignment/: train_assignment.py  utils.py
src/assignment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
