[metadata]
name = assignment
version = attr: assignment.__version__
author = lizqwer
author_email = lizqwerscott@163.com
description = assignment train
keywords = train
long_description = file: README.org
long_description_content_type = text/org
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
python_requires > = 3.10
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    click

[options.entry_points]
console_scripts =
    train_assignment = assignment.train_assignment:main

[options.packages.find]
where = src
